add: ユーザー登録機能

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -33,7 +33,7 @@
         <br><br>
         <%= link_to "ログイン", "#", class: "btn btn-warning" %>
         <br><br>
-        <%= link_to "新規登録ページへ", "#", class: "btn btn-error" %>
+        <%= link_to "新規登録ページへ", new_user_path, class: "btn btn-error" %>
         <br><br>
       </div>
       <br>
