--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
     <h2 class="text-sm leading-8 text-gray-900">- 記録して振り返り、思考を育てる -</h2>
     <div class="flex-none  ml-auto">
       <ul class="menu menu-horizontal px-1">
-        <li><a>新規作成</a></li>
+        <li><%= link_to "ログイン（TOPページへ)", "/" %></li>
         <li>
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
             <summary>Menu</summary>
@@ -26,7 +26,6 @@
                   <a>アプリをシェア（X）</a>
                 </div>
               </li>
-              <li><a>ログアウト</a></li>
             </ul>
           </details>
         </li>
