--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,6 +26,7 @@
                   <a>アプリをシェア（X）</a>
                 </div>
               </li>
+              <li><%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %></li>
             </ul>
           </details>
         </li>
