--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -8,6 +8,17 @@
       <br><br>
 
       <div class="badge badge-neutral badge-lg text-lg">嬉しかったこと・いいね を入力</div>
+      <button class="btn" onclick="my_modal_2.showModal()">書き方例</button>
+      <dialog id="my_modal_2" class="modal">
+        <div class="modal-box">
+          <h3 class="text-lg font-bold">例</h3>
+          <p class="py-4">只今作成中です。<br>アップデートをお待ちください🌱</p>
+          <p class="py-4 text-gray-500">※ESCキーを押すか、外側をクリックすることで閉じます</p>
+        </div>
+        <form method="dialog" class="modal-backdrop">
+          <button>close</button>
+        </form>
+      </dialog>
       <br><br>
       <%= form_with model: @memo do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
@@ -33,16 +44,6 @@
         <br><br>
         <%= f.submit nil, class: "btn btn-error" %>
       <% end %>
-      <label class="form-control w-full max-w-xs">
-  <div class="label">
-    <span class="label-text">左上だけ字が大きめ？</span>
-    <span class="label-text-alt">右上</span>
-  </div>
-  <input type="text" class="input input-bordered w-full max-w-xs" />
-   <div class="label">
-    <span class="label-text-alt">左下</span>
-    <span class="label-text-alt">右下</span>
-   </div>
   </label>
       <br>
     </div>
