--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -8,6 +8,7 @@
       <br><br>
 
       <div class="badge badge-neutral badge-lg text-lg">嬉しかったこと・いいね を入力</div>
+
       <button class="btn" onclick="my_modal_2.showModal()">書き方例</button>
       <dialog id="my_modal_2" class="modal">
         <div class="modal-box">
@@ -19,29 +20,30 @@
           <button>close</button>
         </form>
       </dialog>
-      <br><br>
+
+      <br><br><br>
       <%= form_with model: @memo do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
         いつ（When）<br>
-        <%= f.date_field :date %>
+        <%= f.date_field :date, class: "input input-bordered w-full max-w-xs" %>
         <br><br>
         <%= f.fields_for :memo_content do |key| %>
           何（What）(*)<br>
-          <%= key.text_field 'what',  placeholder: "何？どんなこと？があったの？" %>
+          <%= key.text_field 'what',  placeholder: "何？どんなこと？があったの？", class: "input input-bordered w-full max-w-xs" %>
           <br><br>
           なぜ(Why)(*)<br>
-          <%= key.text_field 'why',  placeholder: "どうして嬉しかったの？" %>
+          <%= key.text_field 'why',  placeholder: "どうして嬉しかったの？", class: "input input-bordered w-full max-w-xs" %>
           <br><br>
           なぜをもっと深掘り(*)<br>
-          <%= key.text_field 'why_more', placeholder: "具体的にはどんなところ？" %>
+          <%= key.text_field 'why_more', placeholder: "具体的にはどんなところ？", class: "input input-bordered w-full max-w-xs" %>
           <br><br>
           どのように(How)(*)<br>
-          <%= key.text_field 'how',  placeholder: "どうやって実現したの？何かアクションをした？" %>
+          <%= key.text_field 'how',  placeholder: "どうやって実現したの？何かアクションをした？", class: "input input-bordered w-full max-w-xs" %>
           <br><br>
           まとめ・気付き<br>
-          <%= key.text_field 'summary', placeholder: "自分の言葉で書き出してみよう" %>
+          <%= key.text_field 'summary', placeholder: "自分の言葉で書き出してみよう", class: "input input-bordered w-full max-w-xs" %>
           <% end %>
-        <br><br>
+        <br><br><br>
         <%= f.submit nil, class: "btn btn-error" %>
       <% end %>
   </label>
