change: ヘッダーの新規作成リンクを有効に

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
     <div class="flex-none  ml-auto">
       <h2 class="text-error text-sm leading-8 p-3">ログイン中</h2>
       <ul class="menu menu-horizontal px-1">
-        <li><%= link_to "新規作成", "#" %></li>
+        <li><%= link_to "新規作成", new_memo_path %></li>
         <li>
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
             <summary>Menu</summary>
