--- a/app/views/memos/confirm.html.erb
+++ b/app/views/memos/confirm.html.erb
@@ -6,59 +6,82 @@
         Memos#confirm　メモ確認
       </p>
       <br><br><br>
-      <%= form_with model: @memo, url: memos_path do |f| %>
+      <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
+          <br>
+          この内容でよろしいですか？
+          <br><br>
 
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
-          <br><br>
-          この内容でよろしいですか？
-
-          <br><br>
-          感情<br>
-          <%= @memo.emotion %>
+          <br>
+          <br>
+          <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
+          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.content %>
+          </div>
           <%= f.hidden_field :emotion, value: @memo.emotion %>
 
           <br><br>
+          <div class="text-gray-400">
           いつ（When）<br>
+          </div>
+          <div class="font-extrabold">
           <%= @memo.date %>
+          </div>
           <%= f.hidden_field :date, value: @memo.date %>
-
 
           <br><br>
           <%= f.fields_for :memo_content do |key| %>
+            <div class="text-gray-400">
             何（What）<br>
+            </div>
+            <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["what"] %>
+            </div>
             <%= key.hidden_field 'what', value: JSON.parse(@memo.memo_content)["what"] %>
 
             <br><br>
+            <div class="text-gray-400">
             なぜ(Why)<br>
+            </div>
+            <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["why"] %>
+            </div>
             <%= key.hidden_field 'why', value: JSON.parse(@memo.memo_content)["why"] %>
             
             <br><br>
+            <div class="text-gray-400">
             なぜをもっと深掘り<br>
+            </div>
+            <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["why_more"] %>
+            </div>
             <%= key.hidden_field 'why_more', value: JSON.parse(@memo.memo_content)["why_more"] %>
 
             <br><br>
+            <div class="text-gray-400">
             どのように(How)<br>
+            </div>
+            <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["how"] %>
+            </div>
             <%= key.hidden_field 'how', value: JSON.parse(@memo.memo_content)["how"] %>
             
             <br><br>
+            <div class="text-gray-400">
             まとめ・気付き<br>
+            </div>
+            <div class="font-extrabold">
             <%= simple_format JSON.parse(@memo.memo_content)["summary"] %>
+            </div>
             <%= key.hidden_field 'summary', value: JSON.parse(@memo.memo_content)["summary"] %>
           <% end %>
 
         <br><br><br>
-          <%= f.submit nil, class: "btn btn-error" %>
+          <%= f.submit "メモ保存", class: "btn btn-error" %>
+          <br>
         <% end %>
         <br>
       </div>
-
-      <br>
-      <%= link_to "◀︎ 前のページに戻る　", :back, class: "btn btn-warning" %>
     </div>
   </div>
 </div>
