--- a/app/views/memos/confirm.html.erb
+++ b/app/views/memos/confirm.html.erb
@@ -11,12 +11,11 @@
           <br>
           この内容でよろしいですか？
           <br><br>
-
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
           <br>
           <br>
           <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
-          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.content %>
+          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.emotion %>
           </div>
           <%= f.hidden_field :emotion, value: @memo.emotion %>
 
