--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -14,7 +14,7 @@
           <br>
           <br>
           <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
-          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.content %>
+          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.emotion %>
           </div>
           <%= f.hidden_field :emotion, value: @memo.emotion %>
 
