--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -6,7 +6,9 @@
         Memos#show　メモ詳細
       </p>
       <br><br>
-      編集・ <%= link_to "削除", memo_path(@memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error" %>
+      <%= link_to "編集", edit_memo_path(@memo), class: "btn btn-success"  %>
+      ・
+      <%= link_to "削除", memo_path(@memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error" %>
       <br>
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
