--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
             <summary>Menu</summary>
             <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
               <li><%= link_to "使い方", "#" %></li>
-              <li><%= link_to "記録一覧", "#" %></li>
+              <li><%= link_to "記録一覧", memos_path %></li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="アップデートをお待ちください">
                   <a>お気に入り一覧</a>
