--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,7 @@
       <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
         <br><br>
         <%= form_with model: @user do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
           <%= f.label :last_name, "姓(*)", class: "label" %>
           <%= f.text_field :last_name, class: "input input-bordered w-full max-w-xs" %>
           <br>
@@ -22,7 +23,7 @@
           <%= f.email_field :email, class: "input input-bordered w-full max-w-xs" %>
           <br>
           <br>
-          <%= f.label :password, "パスワード(*)", class: "label" %>
+          <%= f.label :password, "パスワード（4文字以上）(*)", class: "label" %>
           <%= f.password_field :password, class: "input input-bordered w-full max-w-xs" %>
           <br>
           <br>
