update: メモ一覧のタイトル クリック幅を広げた

--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -21,7 +21,7 @@
             <div class="flex justify-start">
               <%= memo.date || "日付は未選択です" %>
             </div>
-            <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "link link-hover text-xl" %>
+            <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "btn glass btn-wide btn-lg" %>
             <div class="flex justify-end">
               <%= link_to "編集", edit_memo_path(memo), id: memo.id,  class: "btn btn-success mx-1" %>
               <%= link_to "削除", memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error float-right mx-1" %><br><br>
