--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,11 +1,6 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
-
-      <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-        Top#index　機能概要
-      </p>
-
       <p class="mt-6 text-lg leading-8 text-gray-600">
         「その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで<br>
         思考を整理するアプリです。<br>
@@ -18,15 +13,17 @@
 
 
       <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
-        <%= link_to "ログインなしで使ってみる", "#", class: "btn btn-success" %>
+        <%= form_with url: guest_login_path, method: :post, local: true do |f| %>
+          <%= f.button "登録なしで使ってみる", class: "btn btn-success" %>
+        <% end %>
         <br><br>
-        <%= form_with url: login_path, method: :post, local: true do |form| %>
-          <%= form.label :email, "メールアドレス", class: "label" %>
-          <%= form.email_field :email, placeholder: "memosprout@example.com", class: "input input-bordered w-full max-w-xs" %>
+        <%= form_with url: login_path, method: :post, local: true do |f| %>
+          <%= f.label :email, "メールアドレス", class: "label" %>
+          <%= f.email_field :email, placeholder: "memosprout@example.com", class: "input input-bordered w-full max-w-xs" %>
           <br>
           <br>
-          <%= form.label :password, "パスワード", class: "label" %>
-          <%= form.password_field :password, class: "input input-bordered w-full max-w-xs" %>
+          <%= f.label :password, "パスワード", class: "label" %>
+          <%= f.password_field :password, class: "input input-bordered w-full max-w-xs" %>
           <br><br>
           <%= link_to "パスワードをお忘れの方はこちら", "#", class: "btn btn-link" %>
           <br><br>
