--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -13,7 +13,6 @@
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
             <summary>Menu</summary>
           <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
-              <li><a>使い方</a></li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
                   <a>記録一覧</a>
@@ -21,6 +20,11 @@
               </li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="アップデートをお待ちください">
+                  使い方
+                </div>
+              </li>
+              <li>
+                <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
                   <a>お気に入り一覧</a>
                 </div>
               </li>
