--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -1,31 +1,34 @@
 <% parsed_content = JSON.parse(@memo.memo_content) rescue {} %>
+  どんなことがありましたか？<br>
+
   <%= form_with model: @memo, url: form_url, data: { turbo: false } do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
+    <h2 class="text-sm">（※アップデートで感情の選択ができるようになります）</h2><br>
     <%= f.select :emotion, [["嬉しかったこと・いいね", "happy"]], { selected: "happy" }, class: "select select-error w-full max-w-xs" %>
 
-    <br><br>
+    <br><br><br><br>
     いつ（When）<br>
     <%= f.date_field :date, value: @memo.new_record? ? Date.today : @memo.date, class: "input input-bordered w-full max-w-xs" %>
 
-    <br><br>
+    <br><br><br><br>
     <%= f.fields_for :memo_content do |key| %>
       何（What）(*)<br>
-      <%= key.text_area 'what', value: parsed_content['what'], placeholder: "何？どんなこと？があったの？", class: "input input-bordered w-full max-w-xs" %>
+      <%= key.text_area 'what', value: parsed_content['what'], placeholder: "どんなことが嬉しかったの？", class: "input input-bordered w-full max-w-xs" %>
 
-      <br><br>
+      <br><br><br><br>
       なぜ(Why)(*)<br>
       <%= key.text_area 'why', value: parsed_content['why'], placeholder: "どうして嬉しかったの？", class: "input input-bordered w-full max-w-xs" %>
 
-      <br><br>
+      <br><br><br><br>
       なぜをもっと深掘り(*)<br>
-      <%= key.text_area 'why_more', value: parsed_content['why_more'], placeholder: "具体的にはどんなところ？", class: "input input-bordered w-full max-w-xs" %>
+      <%= key.text_area 'why_more', value: parsed_content['why_more'], placeholder: "具体的にはそれのどんなところが？", class: "input input-bordered w-full max-w-xs" %>
 
-      <br><br>
+      <br><br><br><br>
       どのように(How)(*)<br>
       <%= key.text_area 'how', value: parsed_content['how'],  placeholder: "どうやって実現したの？何かアクションをした？", class: "input input-bordered w-full max-w-xs" %>
 
-      <br><br>
-      まとめ・気付き<br>
+      <br><br><br><br>
+      まとめ・気付き(*)<br>
       <%= key.text_area 'summary', value: parsed_content['summary'], placeholder: "自分の言葉で書き出してみよう", class: "input input-bordered w-full max-w-xs h-32" %>
       <% end %>
 
