--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
       <p class="mt-6 text-lg leading-8 text-gray-600">
-        「その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで<br>
+        その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで<br>
         思考を整理するアプリです。<br>
         <br>
         「なぜ？」「どこが？」と具体的に問いかけることで、思考の明確化を促します。<br>
