fix: まとめフォームに(*)を追加

--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -25,7 +25,7 @@
       <%= key.text_area 'how', value: parsed_content['how'],  placeholder: "どうやって実現したの？何かアクションをした？", class: "input input-bordered w-full max-w-xs" %>
 
       <br><br>
-      まとめ・気付き<br>
+      まとめ・気付き(*)<br>
       <%= key.text_area 'summary', value: parsed_content['summary'], placeholder: "自分の言葉で書き出してみよう", class: "input input-bordered w-full max-w-xs h-32" %>
       <% end %>
 
