--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -3,7 +3,7 @@
     <div class="mx-auto max-w-2xl lg:text-center">
 
       <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-        Memos#index　メモ一覧
+        メモ一覧
       </p>
       <br><br>
       <% if @memos.present? %>
