--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -5,7 +5,14 @@
       <%= link_to "編集", edit_memo_path(@memo), class: "btn btn-success"  %>
       ・
       <%= link_to "削除", memo_path(@memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error" %>
-      <br>
+      ・
+
+      <%= link_to "<i class='fa-brands fa-x-twitter'></i>シェア".html_safe, 
+          "https://x.com/share?text=#{CGI.escape(@share_text)}", 
+          target: "_blank", 
+          rel: "noopener noreferrer",
+          class: "btn btn-info" %>
+
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
