--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -6,12 +6,13 @@
       ・
       <%= link_to "削除", memo_path(@memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error" %>
       ・
-
-      <%= link_to "<i class='fa-brands fa-x-twitter'></i>シェア".html_safe, 
-          "https://x.com/share?text=#{CGI.escape(@share_text)}", 
-          target: "_blank", 
-          rel: "noopener noreferrer",
-          class: "btn btn-info" %>
+      <%= link_to "", 
+        target: "_blank", 
+        rel: "noopener noreferrer", 
+        href: "https://x.com/share?text=#{CGI.escape(@share_text)}",
+        class: "btn btn-info" do %>
+        <i class='fa-brands fa-x-twitter'></i>シェア
+      <% end %>
 
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
