--- a/app/views/memos/confirm.html.erb
+++ b/app/views/memos/confirm.html.erb
@@ -1,6 +1,7 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
+      <% content_for :title, "入力内容確認" %>
       <br><br><br>
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
