--- a/app/views/memos/edit.html.erb
+++ b/app/views/memos/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
+      <% content_for :title, "メモ編集" %>
       <button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
       <dialog id="my_modal_2" class="modal">
         <div class="modal-box">
