--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -1,6 +1,7 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
+      <% content_for :title, "メモ一覧" %>
       <% if @memos.present? %>
         <div class="border p-3 mb-10"> <!-- 最終更新のメモ -->
           最新の記録<br><br>
