--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -1,6 +1,7 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
+      <% content_for :title, JSON.parse(@memo.memo_content)["what"] %>
       <br><br>
       <%= link_to "編集", edit_memo_path(@memo), class: "btn btn-success"  %>
       ・
