--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -19,6 +19,11 @@
             </div>
             <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "btn glass btn-wide btn-lg" %>
             <div class="flex justify-end">
+
+                <div id="favorite-star-<%= memo.id %>">
+                  <%= render "shared/favorite_star", memo: memo %> <!-- お気に入りの⭐️ -->
+                </div>
+
               <%= link_to "編集", edit_memo_path(memo), id: memo.id,  class: "btn btn-success mx-1" %>
               <%= link_to "削除", memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error float-right mx-1" %><br><br>
             </div>
