--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -2,6 +2,7 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
       <% content_for :title, "メモ一覧" %>
+      
       <% if @memos.present? %>
         <div class="border p-3 mb-10"> <!-- 最終更新のメモ -->
           最新の記録<br><br>
@@ -9,23 +10,25 @@
           <div class="text-xl">
             <%= JSON.parse(@latest_memo.memo_content)["what"] %>
           </div><br>
-            <%= simple_format(JSON.parse(@latest_memo.memo_content)["summary"]) %> 
+          <%= simple_format(JSON.parse(@latest_memo.memo_content)["summary"]) %> 
         </div>
 
         <% @memos.each do |memo| %> <!-- メモ一覧 -->
-          <div class="border p-3">
-            <div class="flex justify-start">
-              <%= memo.date || "日付は未選択です" %>
-            </div>
-            <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "btn glass btn-wide btn-lg" %>
-            <div class="flex justify-end">
+          <div id="memo-<%= memo.id %>">
+            <div class="border p-3">
+              <div class="flex justify-start">
+                <%= memo.date || "日付は未選択です" %>
+              </div>
+              <!-- タイトル（Whatの内容）-->
+              <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "btn glass btn-wide btn-lg" %>
 
+              <div class="flex justify-end">
                 <div id="favorite-star-<%= memo.id %>">
                   <%= render "shared/favorite_star", memo: memo %> <!-- お気に入りの⭐️ -->
                 </div>
-
-              <%= link_to "編集", edit_memo_path(memo), id: memo.id,  class: "btn btn-success mx-1" %>
-              <%= link_to "削除", memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error float-right mx-1" %><br><br>
+                <%= link_to "編集", edit_memo_path(memo), class: "btn btn-success mx-1" %>
+                <%= link_to "削除", memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error float-right mx-1" %><br><br>
+              </div>
             </div>
           </div>
         <% end %><br><br>
