update: 各ページにタイトル表示

--- a/app/views/memo_favorites/index.html.erb
+++ b/app/views/memo_favorites/index.html.erb
@@ -1,3 +1,4 @@
+<br><h1 class=text-3xl>お気に入り</h1><br>
 <% if @memo_favorites.empty? %> <!-- お気に入りがない場合 -->
   お気に入りのメモはまだありません。<br>
   お気に入り登録をしてみましょう！<br><br>
