--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -2,7 +2,8 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
       <% content_for :title, "メモ一覧" %>
-      
+
+      <h1 class=text-3xl>Memo一覧</h1><br>
       <% if @memos.present? %>
         <div class="border p-3 mb-10"> <!-- 最終更新のメモ -->
           最新の記録<br><br>
@@ -26,8 +27,12 @@
                 <div id="favorite-star-<%= memo.id %>">
                   <%= render "shared/favorite_star", memo: memo %> <!-- お気に入りの⭐️ -->
                 </div>
-                <%= link_to "編集", edit_memo_path(memo), class: "btn btn-success mx-1" %>
-                <%= link_to "削除", memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "btn btn-error float-right mx-1" %><br><br>
+                <%= link_to edit_memo_path(memo), class: "mx-2" do %>
+                <i class="fa-solid fa-pen-to-square"></i>
+                <% end %>
+                <%= link_to memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "mx-2" do %>
+                <i class="fa-solid fa-trash"></i>
+                <% end %>
               </div>
             </div>
           </div>
