--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
       <% content_for :title, "メモ作成" %>
-      メモ作成ページ
+      <h1 class=text-3xl>メモ作成</h1><br>
       <br><br>
       <button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
       <dialog id="my_modal_2" class="modal">
