--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <div class="navbar bg-base-100">
+  <div class="navbar bg-base-100 fixed top-0 left-0 w-full z-50">
     <div class="flex">
       <%= link_to '/' do %>
         <%= image_tag 'logo.png', alt: "Memo Sprout logo", class: "h-14 w-auto" %>
