--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -16,6 +16,7 @@
 
         <br><br>
         累計メモ数：<%= @total_memos %>件<i class="fa-solid fa-seedling"></i>　　
+        連続記録日数：<%= @streak_days %>日<i class="fa-solid fa-sun"></i><br>
         <% @memos.each do |memo| %> <!-- メモ一覧 -->
           <div id="memo-<%= memo.id %>">
             <div class="border p-3">
