add: フィードバックページのリンクを有効に

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,9 +2,9 @@
   <nav class="grid grid-flow-col gap-4">
     <a class="link link-hover">利用規約</a>
     <a class="link link-hover">プライバシーポリシー</a>
-    <a class="link link-hover">お問い合わせ</a>
+    <%= link_to "お問い合わせ", "https://forms.gle/B8L13hSeEwb19WFX8", class: "link link-hover" %>
   </nav>
   <aside>
-    <p>Copyright © 2024. Memo Sprout </p>
+    <p>© 2024. Memo Sprout</p>
   </aside>
 </footer>
