fix: 丸一日記録がない場合に連続記録を0にするよう修正

--- a/app/views/memos/_count_memos.html.erb
+++ b/app/views/memos/_count_memos.html.erb
@@ -1,5 +1,5 @@
 <!-- 呼び出し元は memos#index-->
 <br>
 累計メモ数：<%= @total_memos %>件<i class="fa-solid fa-seedling"></i>　　
-連続記録日数：<%= @streak_days %>日<i class="fa-solid fa-sun"></i>
+連続記録：<%= @streak_days %>日<i class="fa-solid fa-sun"></i>
 <br>
