--- a/app/views/memos/_count_memos.html.erb
+++ b/app/views/memos/_count_memos.html.erb
@@ -1,5 +1,10 @@
 <!-- 呼び出し元は memos#index-->
 <br>
-累計メモ数：<%= @total_memos %>件<i class="fa-solid fa-seedling"></i>　　
-連続記録：<%= @streak_days %>日<i class="fa-solid fa-sun"></i>
+累計メモ数　<i class="fa-solid fa-seedling"></i>　<%= @total_memos %>件<br><br>
+連続記録　<i class="fa-solid fa-sun"></i>　<%= @streak_days %>日<br>
+<% if @today_memo %> <!-- 今日のメモがあるか -->
+  （今日の記録はカウントされています✨）
+<% else %>
+  （今日の記録はまだありません。記録更新を目指しましょう！）</span>
+<% end %>
 <br>
