--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
             <summary>Menu</summary>
             <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
-              <li><%= link_to "記録一覧", memos_path %></li>
+              <li><%= link_to "メモ一覧", memos_path %></li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="アップデートをお待ちください">
                   使い方
