--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -15,7 +15,7 @@
           <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
-                  <a>記録一覧</a>
+                  <a>メモ一覧</a>
                 </div>
               </li>
               <li>
