update: TOPページのアップデート予定機能を変更

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -7,7 +7,7 @@
         <br>
         「なぜ？」「どこが？」と具体的に問いかけることで、思考の明確化を促します。<br>
         <br><br>
-        思考整理を習慣化して、自分の価値観や本質に気づきませんか？
+        思考整理を習慣化して、自分の新しい価値観に気付いてみませんか？
       </p>
       <br><br>
 
@@ -90,9 +90,11 @@
                 <h2 class="card-title">③</h2>
                 <p>
                   <br><br>
-                    アップデート予定機能:<br>
-                    ・記事のお気に入り機能<br>
-                    ・google認証機能 など<br>
+                    アップデート予定<br><br>
+                    ・使い方ページ<br>
+                    ・google認証機能<br>
+                    ・[喜]以外の感情[怒][哀][楽]に対応<br><br>
+                    など<br>
                   <br><br><br>
                 </p>
               </div>
