--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -4,20 +4,9 @@
       <% content_for :title, "メモ作成" %>
       <h1 class=text-3xl>メモ作成</h1><br>
       <br><br>
-      <button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
-      <dialog id="my_modal_2" class="modal">
-        <div class="modal-box">
-          <h3 class="text-lg font-bold">例</h3>
-          <p class="py-4">只今作成中です。<br>アップデートをお待ちください🌱</p>
-          <p class="py-4 text-gray-500">※ESCキーを押すか、外側をクリックすることで閉じます</p>
-        </div>
-        <form method="dialog" class="modal-backdrop">
-          <button>close</button>
-        </form>
-      </dialog>
-
+      <%= render "example"%> <!-- 書き方例ボタン -->
       <br><br><br>
-      <%= render "form", memo: @memo, form_url: confirm_memos_path %>
+      <%= render "form", memo: @memo, form_url: confirm_memos_path %> <!-- メモ入力フォーム -->
     </div>
   </div>
 </div>
