--- a/app/views/memos/_example.html.erb
+++ b/app/views/memos/_example.html.erb
@@ -1,11 +1,55 @@
-      <button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
-      <dialog id="my_modal_2" class="modal">
-        <div class="modal-box">
-          <h3 class="text-lg font-bold">例</h3>
-          <p class="py-4">只今作成中です。<br>アップデートをお待ちください🌱</p>
-          <p class="py-4 text-gray-500">※ESCキーを押すか、外側をクリックすることで閉じます</p>
+<button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
+<dialog id="my_modal_2" class="modal">
+
+  <div class="modal-box max-w-5xl">
+    <div class="mockup-window border-base-300 border w-full">
+      <div class="border-base-300 flex justify-center border-t px-4">
+        <div class="bg-white py-8 w-full text-center">
+          
+          <% content_for :title, "メモ作成" %>
+          <% parsed_content = JSON.parse(@memo.memo_content) rescue {} %>
+          
+          <p>どんなことがありましたか？</p>
+          
+          <%= form_with url: '#', data: { turbo: false } do |f| %>
+            <%= f.select :emotion, [["嬉しかったこと・いいね", "happy"]], { selected: "happy" }, class: "select select-error sm:w-[60%]" %>
+            
+            <br><br>
+            <p>いつ（When）</p>
+            <%= f.date_field :date, value: Date.today, class: "input input-bordered w-[60%]" %>
+            
+            <br><br>
+            <%= f.fields_for :memo_content do |key| %>
+              <p>何（What）(*)</p>
+              <%= key.text_area "what：どんなことが嬉しかったの？", value: parsed_content["what"], placeholder: "おともだちと遊んだこと", class: "input input-bordered w-[60%]" %>
+              
+              <br><br>
+              <p>なぜ(Why)(*)</p>
+              <%= key.text_area "why：どうして嬉しかったの？", value: parsed_content["why"], placeholder: "楽しかったから", class: "input input-bordered w-[60%]" %>
+              
+              <br><br>
+              <p>なぜをもっと深掘り(*)</p>
+              <%= key.text_area "具体的にはそれのどんなところが？", value: parsed_content["why_more"], placeholder: "おままごとをした", class: "input input-bordered w-[60%]" %>
+              
+              <br><br>
+              <p>どのように(How)(*)</p>
+              <%= key.text_area "どうやって実現したの？何かアクションをした？", value: parsed_content["how"], placeholder: "「おままごとしよ」って言った", class: "input input-bordered w-[60%]" %>
+              
+              <br><br>
+              <p>まとめ・気付き(*)</p>
+              <%= key.text_area "自分の言葉で書き出してみよう", value: parsed_content["summary"], placeholder: "おともだちとおままごとをした。\n自分が「遊ぼう」って言ったから遊べた。\n\n（5歳の女の子の例）", class: "input input-bordered h-32 w-[60%]" %>
+            <% end %>
+            
+            <br><br>
+            <%= link_to "入力内容を確認する", "#", class: "btn btn-error" %>
+          <% end %>
+
         </div>
-        <form method="dialog" class="modal-backdrop">
-          <button>close</button>
-        </form>
-      </dialog>
+      </div>
+    </div>
+  </div>
+
+  <form method="dialog" class="modal-backdrop">
+    <button>close</button>
+  </form>
+</dialog>
