--- a/app/views/memos/_example.html.erb
+++ b/app/views/memos/_example.html.erb
@@ -1,8 +1,13 @@
+<!-- 呼び出し元 memos/new.html.erb -->
 <button class="btn btn-outline btn-success" onclick="my_modal_2.showModal()">書き方例</button>
 <dialog id="my_modal_2" class="modal">
 
   <div class="modal-box max-w-5xl">
-    <div class="mockup-window border-base-300 border w-full">
+    <div class="flex flex-wrap md:flex-nowrap"><!-- 子要素を横並びに配置。flex-wrapにより、画面が狭い時には要素が折り返すが、
+                                                    md:flex-nowrapで中サイズ以上の画面では折り返さずに横並びに -->
+
+    <!-- 左側モックアップ -->
+    <div class="mockup-window border-base-300 border w-full md:w-2/3 p-4">
       <div class="border-base-300 flex justify-center border-t px-4">
         <div class="bg-white py-8 w-full text-center">
           
@@ -46,6 +51,40 @@
 
         </div>
       </div>
+    </div>
+
+    <!-- 右側カード表示 -->
+    <div class="flex flex-col grid gap-4 w-full md:w-1/3 p-4">
+      <div class="card shadow w-full">
+        <div class="card-body">
+          <h2 class="card-title"><i class="fa-solid fa-1"></i>感情を選択</h2>
+          <p><br>記録したい出来事への感情を選びます。</p>
+        </div>
+      </div>
+      <div class="card shadow w-full">
+        <div class="card-body">
+          <h2 class="card-title"><i class="fa-solid fa-2"></i>一言ずつ入力</h2>
+          <p><br>フォームに沿って<br>内容の詳細を記録します。</p>
+        </div>
+      </div>
+      <div class="card shadow w-full">
+        <div class="card-body">
+          <h2 class="card-title">　</h2>
+          <p><br>『なぜ？』を深めることで<br>自身の考えを認識します。</p>
+        </div>
+      </div>
+      <div class="card shadow w-full">
+        <div class="card-body">
+          <h2 class="card-title"><i class="fa-solid fa-3"></i>まとめ</h2>
+          <p><br>
+            自身が持っている答えを認識したり、新たな発見があるかもしれません。
+            気づきやまとめも簡潔に記録しましょう。
+            続けることで、思考整理や言語化の芽が出るかもしれません<i class="fa-solid fa-seedling"></i>
+          </p>
+        </div>
+      </div>
+    </div>
+
     </div>
   </div>
 
