--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -23,9 +23,7 @@
                 </div>
               </li>
               <li>
-                <div class="tooltip tooltip-left" data-tip="アップデートをお待ちください">
-                  使い方
-                </div>
+                <a onclick="my_modal_3.showModal()">使い方</a> <!-- モーダルを開くリンク -->
               </li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
@@ -43,4 +41,5 @@
       </ul>
     </div>
   </div>
+<%= render "memos/example" %>
 </header>
