style: コメントアウトの修正

--- a/app/views/memos/_example.html.erb
+++ b/app/views/memos/_example.html.erb
@@ -1,4 +1,4 @@
-<!-- 呼び出し元 memos/new.html.erb -->
+<!-- 呼び出し元 memos/new.html.erb, shared/_header.html.erb -->
 <dialog id="my_modal_3" class="modal">
 
   <div class="modal-box max-w-5xl">
